--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<!-- <header> -->
-  <app-header></app-header>
-<!-- </header> -->
+
+<app-header/>
+<main>
+<ul id="users">
+  <li><app-user/></li>
+</ul>
+</main>
+
