--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,10 @@
 <div>
-    <button>
-        <img src={{selectedUser.avatar}}/>
-        <span>{{selectedUser.name}}</span>
+    <button (click)="onSelectedUser()">
+        <!-- property binding for the image -->
+        <img 
+        [src]="imagePath()"  
+        [alt]="selectedUser().name"
+        />
+        <span>{{selectedUser().name}}</span>
     </button>
 </div>
