added a select handler with a decorator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,46 @@
-
-<app-header/>
+<app-header />
 <main>
-<ul id="users">
-  <li><app-user [avatar]="users[0].avatar" [name]="users[0].name"/></li>
-  <li><app-user [avatar]="users[1].avatar" [name]="users[1].name"/></li>
-  <li><app-user [avatar]="users[2].avatar" [name]="users[2].name"/></li>
-  <li><app-user [avatar]="users[3].avatar" [name]="users[3].name"/></li>
-  <li><app-user [avatar]="users[4].avatar" [name]="users[4].name"/></li>
-</ul>
+  <ul id="users">
+    <li>
+      <app-user
+        [userId]="users[0].id"
+        [avatar]="users[0].avatar"
+        [name]="users[0].name"
+        (selectedTask)="onSelectedUser($event)" 
+        
+      />
+      <!-- the $event contains the data of the event that was emitted -->
+    </li>
+    <li>
+      <app-user
+        [userId]="users[1].id"
+        [avatar]="users[1].avatar"
+        [name]="users[1].name"
+        (selectedTask)="onSelectedUser($event)" 
+      />
+    </li>
+    <li>
+      <app-user
+        [userId]="users[2].id"
+        [avatar]="users[2].avatar"
+        [name]="users[2].name"
+      />
+    </li>
+    <li>
+      <app-user
+        [userId]="users[3].id"
+        [avatar]="users[3].avatar"
+        [name]="users[3].name"
+        (selectedTask)="onSelectedUser($event)" 
+      />
+    </li>
+    <li>
+      <app-user
+        [userId]="users[4].id"
+        [avatar]="users[4].avatar"
+        [name]="users[4].name"
+        (selectedTask)="onSelectedUser($event)" 
+      />
+    </li>
+  </ul>
 </main>
-
